// Protobuf definition file generated by `openapi2proto`.
//
// The file was then post-edited to include a dummy value for enum values 0.
//
// Also, `GeneDataMessage` was partially completed.

syntax = "proto3";

package annonars.panelapp;

message Activity {
  string created = 1;
  string entity_name = 2;
  string entity_type = 3;
  string item_type = 4;
  string panel_id = 5;
  string panel_name = 6;
  string panel_version = 7;
  string text = 8;
  string user_name = 9;
}

message Evaluation {
  enum EvaluationModeOfPathogenicity {
    EVALUATION_MODE_OF_PATHOGENICITY = 0;
    EVALUATION_MODE_OF_PATHOGENICITY_LOSS_OF_FUNCTION_VARIANTS_AS_DEFINED_IN_POP_UP_MESSAGE_DO_NOT_CAUSE_THIS_PHENOTYPE_PLEASE_PROVIDE_DETAILS_IN_THE_COMMENTS = 1;
    EVALUATION_MODE_OF_PATHOGENICITY_OTHER = 2;
  }

  enum EvaluationMoi {
    EVALUATION_MOI = 0;
    EVALUATION_MOI_MONOALLELIC_AUTOSOMAL_OR_PSEUDOAUTOSOMAL_NOT_IMPRINTED = 1;
    EVALUATION_MOI_MONOALLELIC_AUTOSOMAL_OR_PSEUDOAUTOSOMAL_MATERNALLY_IMPRINTED_PATERNAL_ALLELE_EXPRESSED = 2;
    EVALUATION_MOI_MONOALLELIC_AUTOSOMAL_OR_PSEUDOAUTOSOMAL_PATERNALLY_IMPRINTED_MATERNAL_ALLELE_EXPRESSED = 3;
    EVALUATION_MOI_MONOALLELIC_AUTOSOMAL_OR_PSEUDOAUTOSOMAL_IMPRINTED_STATUS_UNKNOWN = 4;
    EVALUATION_MOI_BIALLELIC_AUTOSOMAL_OR_PSEUDOAUTOSOMAL = 5;
    EVALUATION_MOI_BOTH_MONOALLELIC_AND_BIALLELIC_AUTOSOMAL_OR_PSEUDOAUTOSOMAL = 6;
    EVALUATION_MOI_BOTH_MONOALLELIC_AND_BIALLELIC_BUT_BIALLELIC_MUTATIONS_CAUSE_A_MORE_SEVERE_DISEASE_FORM_AUTOSOMAL_OR_PSEUDOAUTOSOMAL = 7;
    EVALUATION_MOI_X_LINKED_HEMIZYGOUS_MUTATION_IN_MALES_BIALLELIC_MUTATIONS_IN_FEMALES = 8;
    EVALUATION_MOI_X_LINKED_HEMIZYGOUS_MUTATION_IN_MALES_MONOALLELIC_MUTATIONS_IN_FEMALES_MAY_CAUSE_DISEASE_MAY_BE_LESS_SEVERE_LATER_ONSET_THAN_MALES = 9;
    EVALUATION_MOI_MITOCHONDRIAL = 10;
    EVALUATION_MOI_UNKNOWN = 11;
    EVALUATION_MOI_OTHER = 12;
  }

  enum EvaluationRating {
    EVALUATION_RATING = 0;
    EVALUATION_RATING_GREEN = 1;
    EVALUATION_RATING_RED = 2;
    EVALUATION_RATING_AMBER = 3;
  }

  // Interruptions in the repeated sequence are reported as part of standard diagnostic practise
  bool clinically_relevant = 1;
  string created = 2;
  bool current_diagnostic = 3;
  EvaluationModeOfPathogenicity mode_of_pathogenicity = 4;
  EvaluationMoi moi = 5;
  repeated string phenotypes = 6;
  repeated string publications = 7;
  EvaluationRating rating = 8;
}

message GeneDataMessage {
  optional string hgnc_id = 1;
  optional string gene_name = 2;
  repeated string alias = 3;
  optional string gene_symbol = 4;
  optional string hgnc_symbol = 5;
}

message Gene {
  enum GeneModeOfPathogenicity {
    GENE_MODE_OF_PATHOGENICITY = 0;
    GENE_MODE_OF_PATHOGENICITY_LOSS_OF_FUNCTION_VARIANTS_AS_DEFINED_IN_POP_UP_MESSAGE_DO_NOT_CAUSE_THIS_PHENOTYPE_PLEASE_PROVIDE_DETAILS_IN_THE_COMMENTS = 1;
    GENE_MODE_OF_PATHOGENICITY_OTHER = 2;
  }

  enum GenePenetrance {
    GENE_PENETRANCE = 0;
    GENE_PENETRANCE_UNKNOWN = 1;
    GENE_PENETRANCE_COMPLETE = 2;
    GENE_PENETRANCE_INCOMPLETE = 3;
  }

  string confidence_level = 1;
  string entity_name = 2;
  string entity_type = 3;
  repeated string evidence = 4;
  GeneDataMessage gene_data = 5;
  string mode_of_inheritance = 6;
  GeneModeOfPathogenicity mode_of_pathogenicity = 7;
  Panel panel = 8;
  GenePenetrance penetrance = 9;
  repeated string phenotypes = 10;
  repeated string publications = 11;
  repeated string tags = 12;
  repeated string transcript = 13;
}

message HistoricalSnapshot {
  message DataMessage {}

  DataMessage data = 1;
  string signed_off_date = 2;
}

message Panel {
  message StatsMessage {}

  string disease_group = 1;
  string disease_sub_group = 2;
  string hash_id = 3;
  int32 id = 4;
  string name = 5;
  repeated string relevant_disorders = 6;

  // Object with panel statistics (number of genes or STRs)
  StatsMessage stats = 7;
  string status = 8;
  repeated PanelType types = 9;
  string version = 10;
  string version_created = 11;
}

message PanelType {
  string description = 1;
  string name = 2;
  string slug = 3;
}

message Region {
  enum RegionChromosome {
    REGION_CHROMOSOME_UNKNOWN = 0;
    REGION_CHROMOSOME_1 = 1;
    REGION_CHROMOSOME_2 = 2;
    REGION_CHROMOSOME_3 = 3;
    REGION_CHROMOSOME_4 = 4;
    REGION_CHROMOSOME_5 = 5;
    REGION_CHROMOSOME_6 = 6;
    REGION_CHROMOSOME_7 = 7;
    REGION_CHROMOSOME_8 = 8;
    REGION_CHROMOSOME_9 = 9;
    REGION_CHROMOSOME_10 = 10;
    REGION_CHROMOSOME_11 = 11;
    REGION_CHROMOSOME_12 = 12;
    REGION_CHROMOSOME_13 = 13;
    REGION_CHROMOSOME_14 = 14;
    REGION_CHROMOSOME_15 = 15;
    REGION_CHROMOSOME_16 = 16;
    REGION_CHROMOSOME_17 = 17;
    REGION_CHROMOSOME_18 = 18;
    REGION_CHROMOSOME_19 = 19;
    REGION_CHROMOSOME_20 = 20;
    REGION_CHROMOSOME_21 = 21;
    REGION_CHROMOSOME_22 = 22;
    REGION_CHROMOSOME_X = 23;
    REGION_CHROMOSOME_Y = 24;
  }

  enum RegionHaploinsufficiencyScore {
    REGION_HAPLOINSUFFICIENCY_SCORE_UNKNOWN = 0;
    REGION_HAPLOINSUFFICIENCY_SCORE_3 = 1;
    REGION_HAPLOINSUFFICIENCY_SCORE_2 = 2;
    REGION_HAPLOINSUFFICIENCY_SCORE_1 = 3;
    REGION_HAPLOINSUFFICIENCY_SCORE_0 = 4;
    REGION_HAPLOINSUFFICIENCY_SCORE_40 = 5;
    REGION_HAPLOINSUFFICIENCY_SCORE_30 = 6;
  }

  enum RegionModeOfPathogenicity {
    REGION_MODE_OF_PATHOGENICITY_UNKNOWN = 0;
    REGION_MODE_OF_PATHOGENICITY_LOSS_OF_FUNCTION_VARIANTS_AS_DEFINED_IN_POP_UP_MESSAGE_DO_NOT_CAUSE_THIS_PHENOTYPE_PLEASE_PROVIDE_DETAILS_IN_THE_COMMENTS = 1;
    REGION_MODE_OF_PATHOGENICITY_OTHER = 2;
  }

  enum RegionPenetrance {
    REGION_PENETRANCE_UNKNOWN = 0;
    REGION_PENETRANCE_COMPLETE = 1;
    REGION_PENETRANCE_INCOMPLETE = 2;
  }

  enum RegionTriplosensitivityScore {
    REGION_TRIPLOSENSITIVITY_SCORE_UNKNOWN = 0;
    REGION_TRIPLOSENSITIVITY_SCORE_3 = 1;
    REGION_TRIPLOSENSITIVITY_SCORE_2 = 2;
    REGION_TRIPLOSENSITIVITY_SCORE_1 = 3;
    REGION_TRIPLOSENSITIVITY_SCORE_0 = 4;
    REGION_TRIPLOSENSITIVITY_SCORE_40 = 5;
    REGION_TRIPLOSENSITIVITY_SCORE_30 = 6;
  }

  enum RegionTypeOfVariants {
    REGION_TYPE_OF_VARIANTS_UNKNOWN = 0;
    REGION_TYPE_OF_VARIANTS_SMALL = 1;
    REGION_TYPE_OF_VARIANTS_CNV_LOSS = 2;
    REGION_TYPE_OF_VARIANTS_CNV_GAIN = 3;
    REGION_TYPE_OF_VARIANTS_CNV_BOTH = 4;
  }

  RegionChromosome chromosome = 1;
  string confidence_level = 2;
  string entity_name = 3;
  string entity_type = 4;
  repeated string evidence = 5;
  GeneDataMessage gene_data = 6;
  repeated int32 grch37_coordinates = 7;
  repeated int32 grch38_coordinates = 8;
  RegionHaploinsufficiencyScore haploinsufficiency_score = 9;
  string mode_of_inheritance = 10;
  RegionModeOfPathogenicity mode_of_pathogenicity = 11;
  Panel panel = 12;
  RegionPenetrance penetrance = 13;
  repeated string phenotypes = 14;
  repeated string publications = 15;

  // Required percent of overlap
  int32 required_overlap_percentage = 16;
  repeated string tags = 17;
  RegionTriplosensitivityScore triplosensitivity_score = 18;
  RegionTypeOfVariants type_of_variants = 19;

  // Region Name
  string verbose_name = 20;
}

message STR {
  enum STRChromosome {
    STR_CHROMOSOME_UNKNOWN = 0;
    STR_CHROMOSOME_1 = 1;
    STR_CHROMOSOME_2 = 2;
    STR_CHROMOSOME_3 = 3;
    STR_CHROMOSOME_4 = 4;
    STR_CHROMOSOME_5 = 5;
    STR_CHROMOSOME_6 = 6;
    STR_CHROMOSOME_7 = 7;
    STR_CHROMOSOME_8 = 8;
    STR_CHROMOSOME_9 = 9;
    STR_CHROMOSOME_10 = 10;
    STR_CHROMOSOME_11 = 11;
    STR_CHROMOSOME_12 = 12;
    STR_CHROMOSOME_13 = 13;
    STR_CHROMOSOME_14 = 14;
    STR_CHROMOSOME_15 = 15;
    STR_CHROMOSOME_16 = 16;
    STR_CHROMOSOME_17 = 17;
    STR_CHROMOSOME_18 = 18;
    STR_CHROMOSOME_19 = 19;
    STR_CHROMOSOME_20 = 20;
    STR_CHROMOSOME_21 = 21;
    STR_CHROMOSOME_22 = 22;
    STR_CHROMOSOME_X = 23;
    STR_CHROMOSOME_Y = 24;
  }

  enum STRPenetrance {
    STR_PENETRANCE_UNKNOWN = 0;
    STR_PENETRANCE_COMPLETE = 1;
    STR_PENETRANCE_INCOMPLETE = 2;
  }

  STRChromosome chromosome = 1;
  string confidence_level = 2;
  string entity_name = 3;
  string entity_type = 4;
  repeated string evidence = 5;
  GeneDataMessage gene_data = 6;
  repeated int32 grch37_coordinates = 7;
  repeated int32 grch38_coordinates = 8;
  string mode_of_inheritance = 9;

  // =< Maximum normal number of repeats
  int32 normal_repeats = 10;
  Panel panel = 11;

  // >= Minimum fully penetrant pathogenic number of repeats
  int32 pathogenic_repeats = 12;
  STRPenetrance penetrance = 13;
  repeated string phenotypes = 14;
  repeated string publications = 15;
  string repeated_sequence = 16;
  repeated string tags = 17;
}
